css/main.css
/* ... */
.pending.svelte-1ed2p3z {
    opacity: 1;
}

#chat-tab {
    padding: 0;
}

#chat-tab > :nth-child(1) {
    display: flex;
    flex-direction: row;
    gap: 0;
}

#chat-tab button, #notebook-tab button, #default-tab button {
    min-width: 0 !important;
}

#chat-tab > :first-child, #extensions {
    margin-left: auto;
    margin-right: auto;
}

@media screen and (width <= 688px) {
    #chat-tab {
        padding-left: 0;
        padding-right: 0;
    }

    .chat {
        padding-left: 0;
        padding-right: 0;
    }
}

.chat {
    margin-left: auto;
    margin-right: auto;
    flex: 1;
    overflow-y: hidden;
    display: flex;
    flex-direction: column;
    word-break: break-word;
    overflow-wrap: anywhere;
    border-top: none;
    border-radius: 0;
    visibility: visible;
}

.chat-parent {
    flex: 1;
    overflow: auto !important;
    border-radius: 0 !important;
    margin-bottom: 8px;
}

.chat-parent .prose {
    visibility: visible;
}

.chat .message {
    margin-left: auto;
    margin-right: auto;
    text-align: start;
    padding-left: 1rem;
    padding-right: 1rem;
    contain: layout paint;
}

.message,
.user-message,
.assistant-message {
    contain: layout paint;
}

.chat .message .timestamp {
    font-size: 0.7em;
    display: inline-block;
    font-weight: normal;
    opacity: 0.7;
    margin-left: 5px;
}

.chat > .messages {
    display: flex;
    flex-direction: column;
    min-height: calc(100vh - 225px);
}

.chat > .messages > :first-child {
    padding-top: 20px;
}

.chat > .messages > .message:last-child {
    padding-bottom: 2rem;
}

.message-body {
    font-size: 16px;
}

.dark .message-body h1,
.dark .message-body h2,
.dark .message-body h3,
.dark .message-body h4,
.dark .message-body h5,
.dark .message-body h6 {
    color: #e8e8e8 !important;
}

.message-body blockquote {
    border-left-width: 4px;
    border-left-color: var(--border-color-primary);
}

.message-body h1,
.message-body h2,
.message-body h3,
.message-body h4,
.message-body h5,
.message-body h6 {
    color: #1a1a1a;
}

.message-body h1 {
    font-weight: 700;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
}

.message-body h2 {
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
}

.message-body h3 {
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
}

.message-body h4 {
    font-weight: 600;
    font-size: 1em;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
}

.message-body h5 {
    font-weight: 600;
    font-size: 1em;
    margin: 0;
}

.message-body h6 {
    font-weight: 600;
    font-size: 1em;
    margin: 0;
}

.dark .message q {
    color: #f5b031;
}

.message q {
    color: #3480be;
}

.message-body q::before, .message-body q::after {
    content: "";
}

.message-body li {
    list-style-position: outside;
    margin-top: 0.5em !important;
    margin-bottom: 0.5em !important;
}

.message-body ul.long-list > li,
.message-body ol.long-list > li {
    margin-top: 1.25em !important;
    margin-bottom: 1.25em !important;
}

.message-body a {
    font-weight: 500;
}

.chat .message-body ul, .chat .message-body ol {
    padding-inline-start: 2em;
}

.message-body li > p {
    display: inline !important;
}

.message-body ul {
    list-style-type: disc !important;
}

.message-body pre:not(:last-child) {
    margin-bottom: 35.625px !important;
}

.message-body pre:last-child {
    margin-bottom: 0 !important;
}

#default-tab .prose pre, #notebook-tab .prose pre {
    overflow: scroll;
}

.prose ul ul {
    margin: 0;
}

.message-body pre > code {
    white-space: pre !important;
    overflow-x: auto !important;
    max-width: calc(100dvw - 39px);
    border: 1px solid #666;
    border-radius: 5px;
    font-size: 82%;
    padding: 1px 3px;
    background: #f3f4f6 !important;
    color: #1f2328;
    scrollbar-width: thin;
    scrollbar-color: var(--neutral-300) transparent;
}

.dark .message-body pre > code {
    background: #0d1117 !important;
    color: rgb(201 209 217);
    scrollbar-color: rgb(255 255 255 / 6.25%) transparent;
}

.message-body pre > code {
    display: block;
    padding: 15px;
}

.message-body :not(pre) > code {
    white-space: normal !important;
    font-weight: bold;
    font-size: 0.95em;
    font-family: Menlo,"Roboto Mono","Courier New",Courier,monospace,Inter,sans-serif;
    padding: .15rem .3rem;
    background-color: #ececec;
}

.dark .message-body :not(pre) > code {
    background-color: rgb(255 255 255 / 10%);
}

#chat-input {
    padding: 0;
    background: transparent;
    border: none;
}

#chat-input textarea {
    background: var(--bg-input);
    padding: 0.675rem 2.5rem 0.6rem;
    margin-top: 0.15rem;
    border: 1px solid var(--border);
    border-radius: 1.5rem;
    overflow-y: auto !important;
}

#chat-input textarea::-webkit-scrollbar {
    width: 7px;
}

#chat-input textarea::-webkit-scrollbar-track {
    background: transparent;
}

#chat-input textarea::-webkit-scrollbar-thumb {
    background: var(--neutral-300);
    border-radius: 9999px;
}

.dark #chat-input textarea::-webkit-scrollbar-thumb {
    background: rgb(255 255 255 / 6.25%);
}

#chat-input textarea::placeholder {
    white-space: nowrap;
    overflow: hidden;
    color: #9ca3af !important;
    opacity: 1 !important;
}

#chat-input textarea:focus {
    box-shadow: none !important;
}

#chat-input > :first-child {
    background-color: transparent;
}

#chat-input .progress-text {
    display: none;
}

#chat-input .submit-button {
    display: none;
}

#chat-input .upload-button {
    margin-right: 16px;
    margin-bottom: 7px;
    background: transparent;
}
/* ... */

